// Jest Snapshot v1, https://goo.gl/fbAQLP @generated

exports[`Wallet with BCH balances 1`] = `
Array [
  <div
    className="sc-iAyFgw chWhWK"
  >
    <h4
      className="sc-iRbamj gCEMNU"
    >
      MigrationTestAlpha
    </h4>
    <div
      className="sc-eHgmQL znFwg"
    >
      0
       
      XEC
    </div>
  </div>,
  <div
    className="sc-kEYyzF gZfJyA"
  >
    <div
      className="sc-jDwBTQ yQqNZ"
    >
      <h3>
        Create a Token
      </h3>
    </div>
    <p
      className="sc-brqgnP kPbEse"
    >
      You need at least
       
      5.5
       
      XEC
       (
      $
      NaN
       
      USD
      ) to create a token
    </p>
  </div>,
]
`;

exports[`Wallet with BCH balances and tokens 1`] = `
Array [
  <div
    className="sc-iAyFgw chWhWK"
  >
    <h4
      className="sc-iRbamj gCEMNU"
    >
      MigrationTestAlpha
    </h4>
    <div
      className="sc-eHgmQL znFwg"
    >
      0
       
      XEC
    </div>
  </div>,
  <div
    className="sc-kEYyzF gZfJyA"
  >
    <div
      className="sc-jDwBTQ yQqNZ"
    >
      <h3>
        Create a Token
      </h3>
    </div>
    <p
      className="sc-brqgnP kPbEse"
    >
      You need at least
       
      5.5
       
      XEC
       (
      $
      NaN
       
      USD
      ) to create a token
    </p>
  </div>,
]
`;

exports[`Wallet with BCH balances and tokens and state field 1`] = `
Array [
  <div
    className="sc-iAyFgw chWhWK"
  >
    <h4
      className="sc-iRbamj gCEMNU"
    >
      MigrationTestAlpha
    </h4>
    <div
      className="sc-eHgmQL znFwg"
    >
      0.06
       
      XEC
    </div>
  </div>,
  <div
    className="sc-kEYyzF gZfJyA"
  >
    <div
      className="sc-jDwBTQ yQqNZ"
    >
      <h3>
        Create a Token
      </h3>
      <div
        className="sc-VigVT hPTEEJ"
      >
        <div />
      </div>
      <button
        className="sc-jKJlTe cxrKVk"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "marginTop": "30px",
          }
        }
      >
        <span
          aria-label="plus-square"
          className="anticon anticon-plus-square"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus-square"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
            />
            <path
              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
            />
          </svg>
        </span>
         Create eToken
      </button>
    </div>
  </div>,
]
`;

exports[`Wallet without BCH balance 1`] = `
Array [
  <div
    className="sc-iAyFgw chWhWK"
  >
    <h4
      className="sc-iRbamj gCEMNU"
    >
      MigrationTestAlpha
    </h4>
    <div
      className="sc-eHgmQL znFwg"
    >
      0
       
      XEC
    </div>
  </div>,
  <div
    className="sc-kEYyzF gZfJyA"
  >
    <div
      className="sc-jDwBTQ yQqNZ"
    >
      <h3>
        Create a Token
      </h3>
    </div>
    <p
      className="sc-brqgnP kPbEse"
    >
      You need at least
       
      5.5
       
      XEC
       (
      $
      NaN
       
      USD
      ) to create a token
    </p>
  </div>,
]
`;

exports[`Without wallet defined 1`] = `
Array [
  <div
    className="sc-iAyFgw chWhWK"
  >
    <div
      className="sc-eHgmQL znFwg"
    >
      0
       
      XEC
    </div>
  </div>,
  <div
    className="sc-kEYyzF gZfJyA"
  >
    <div
      className="sc-jDwBTQ yQqNZ"
    >
      <h3>
        Create a Token
      </h3>
    </div>
    <p
      className="sc-brqgnP kPbEse"
    >
      You need at least
       
      5.5
       
      XEC
       (
      $
      NaN
       
      USD
      ) to create a token
    </p>
  </div>,
]
`;
